# dcodex_collation

./: .coveragerc  README.md  admin.py  models.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  urls.py  views.py
dcodex_collation/: __init__.py  admin.py  apps.py  forms.py  graph.py  latex.py  models.py  nexus.py  tei.py  urls.py  views.py
dcodex_collation/dcodex_collation/: transition.html
dcodex_collation/dcodex_collation/partials/: _state_with_rows.html
dcodex_collation/management/commands/: _mixins.py  align-family.py  aligned_pairwise_similarity.py  alignment-pairwise-array.py  alignment-pairwise-similarity.py  alignment_pairwise_array.py  atext-nonsingular.py  classify.py  delete-invalid-transitions.py  disagreements.py  entropy.py  family-to-latex.py  group-readings.py  groupreadings.py  importregextransitionclassifiers.py  multi-word-omission.py  nexus.py  search-alignments.py  tei-apparatus.py  unique-readings.py  uniquereadings.py  untagged.py  variant-graph.py
dcodex_collation/migrations/: 0001_squashed_0021_remove_row_tokens.py  0002_auto_20201215_0309.py  0003_auto_20210209_0158.py  0004_atext_transition_transitiontype.py  0004_auto_20210221_0238.py  0005_transitiontypetoignore.py  0006_auto_20210309_0316.py  0007_auto_20200825_2216.py  0007_auto_20210407_0437.py  0008_auto_20210430_2318.py  0009_auto_20210612_1823.py  0009_token_rank.py  0010_auto_20200826_0856.py  0010_auto_20210612_1827.py  0011_alter_column_options.py  0013_auto_20200826_1014.py  0014_auto_20200826_2202.py  0015_transition.py  0018_rate_ratesystem_transitionrate.py  0020_auto_20201116_2146.py  0021_remove_row_tokens.py
dcodex_collation/templates/dcodex_collation/: alignment.html  alignment_states.html  apparatus.html  atext_list.html  column_detail.html  comparison_table.html  multi_column_detail.html  pairwise_comparison.html  transitiontype_detail.html  transitiontype_list.html
dcodex_collation/templatetags/: dcodex_collation_tags.py
migrations/: 0001_initial.py  0002_auto_20200822_2207.py  0003_remove_alignment_matrix_data.py  0005_auto_20200825_1717.py  0006_auto_20200825_2146.py  0008_cell_state_token.py  0011_auto_20200826_0857.py  0012_auto_20200826_0907.py  0016_remove_state_column.py  0017_auto_20200829_1339.py  0019_auto_20201102_1048.py
templates/dcodex_collation/: alignment.html  transition.html
templates/dcodex_collation/partials/: _alignment_table.html  (+3 more)
templatetags/: dcodex_collation_tags.py
tests/: test_models.py  test_settings.py  test_tei.py
(+5 files in other folders)
